--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,7 @@
         android:layout_marginEnd="8dp" />
 
     <LinearLayout
+        android:id="@+id/ll"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +78,7 @@
             android:layout_marginLeft="8dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/BezierBtn"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -85,7 +86,46 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:layout_weight="1"
-            android:text="Button"
+            android:text="贝塞尔曲线"
+            app:layout_constraintLeft_toRightOf="@+id/pathViewBtn"
+            app:layout_constraintRight_toRightOf="parent" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ll"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/turningArrow"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="旋转箭头"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/searchViewBtn"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="搜索View"
+            android:layout_weight="1"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp" />
+
+        <Button
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            android:text=""
             app:layout_constraintLeft_toRightOf="@+id/pathViewBtn"
             app:layout_constraintRight_toRightOf="parent" />
     </LinearLayout>
