--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -119,13 +119,14 @@
 
         <Button
             style="@style/Widget.AppCompat.Button.Colored"
+            android:id="@+id/zoomImageViewBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:layout_weight="1"
-            android:text=""
+            android:text="缩放图片"
             app:layout_constraintLeft_toRightOf="@+id/pathViewBtn"
             app:layout_constraintRight_toRightOf="parent" />
     </LinearLayout>
