--- a/app/src/main/res/layout/activity_search_view.xml
+++ b/app/src/main/res/layout/activity_search_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,7 +7,15 @@
     tools:context="cn.edu.xjtu.customviews.activity.SearchViewActivity">
     <cn.edu.xjtu.customviews.activity.SearchView
         android:id="@+id/searchView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"/>
+    <!--<RelativeLayout
+        android:layout_below="@id/searchView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <SearchView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>-->
 </RelativeLayout>
