--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
                     android:layout_height="wrap_content"
                     android:text="加载动效"
                     android:layout_marginTop="8dp"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     app:layout_constraintLeft_toLeftOf="parent" />
 
@@ -75,14 +75,14 @@
                     android:text="Path绘制"
                     android:layout_weight="1"
                     android:layout_marginTop="8dp"
-                    android:layout_marginLeft="8dp" />
+                    android:layout_marginStart="8dp" />
 
                 <Button
                     android:id="@+id/BezierBtn"
                     style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_weight="1"
@@ -101,7 +101,7 @@
                     android:layout_height="wrap_content"
                     android:text="旋转箭头"
                     android:layout_marginTop="8dp"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
                     android:layout_weight="1" />
 
                 <Button
@@ -112,14 +112,14 @@
                     android:text="搜索View"
                     android:layout_weight="1"
                     android:layout_marginTop="8dp"
-                    android:layout_marginLeft="8dp" />
+                    android:layout_marginStart="8dp" />
 
                 <Button
                     style="@style/Widget.AppCompat.Button.Colored"
                     android:id="@+id/zoomImageViewBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_weight="1"
@@ -136,7 +136,7 @@
                     android:layout_height="wrap_content"
                     android:text="Region初探"
                     android:layout_marginTop="8dp"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
                     android:layout_weight="1" />
 
                 <Button
@@ -147,14 +147,14 @@
                     android:text="DragView"
                     android:layout_weight="1"
                     android:layout_marginTop="8dp"
-                    android:layout_marginLeft="8dp" />
+                    android:layout_marginStart="8dp" />
 
                 <Button
                     android:id="@+id/gestureDetectorBtn"
                     style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_weight="1"
@@ -171,7 +171,7 @@
                     android:layout_height="wrap_content"
                     android:text="太极八卦图"
                     android:layout_marginTop="8dp"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
                     android:layout_weight="1" />
 
                 <Button
@@ -182,18 +182,51 @@
                     android:text="@string/smile_view"
                     android:layout_weight="1"
                     android:layout_marginTop="8dp"
-                    android:layout_marginLeft="8dp" />
+                    android:layout_marginStart="8dp" />
 
                 <Button
                     android:id="@+id/listViewStyleBtn"
                     style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_weight="1"
                     android:text="列表样式"
+                    app:layout_constraintLeft_toRightOf="@+id/pathViewBtn"
+                    app:layout_constraintRight_toRightOf="parent" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/recyclerViewBtn"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Recycler View"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_weight="1" />
+
+                <Button
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="8dp" />
+
+                <Button
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_weight="1"
                     app:layout_constraintLeft_toRightOf="@+id/pathViewBtn"
                     app:layout_constraintRight_toRightOf="parent" />
             </LinearLayout>
