--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -212,14 +212,17 @@
                     android:layout_weight="1" />
 
                 <Button
+                    android:id="@+id/cubicInputBtn"
                     style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:text="立方体登录"
                     android:layout_marginTop="8dp"
                     android:layout_marginStart="8dp" />
 
                 <Button
+                    android:id="@+id/propertyAnimBtn"
                     style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -227,6 +230,44 @@
                     android:layout_marginRight="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_weight="1"
+                    android:text="属性动画2"
+                    app:layout_constraintLeft_toRightOf="@+id/pathViewBtn"
+                    app:layout_constraintRight_toRightOf="parent" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/drawerActBtn"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="抽屉式页面"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_weight="1" />
+
+                <Button
+                    android:id="@+id/buttonsBtn"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="各种按钮"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="8dp" />
+
+                <Button
+                    android:id="@+id/vvcb"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_weight="1"
+                    android:text=""
                     app:layout_constraintLeft_toRightOf="@+id/pathViewBtn"
                     app:layout_constraintRight_toRightOf="parent" />
             </LinearLayout>
