--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -2,7 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="56dp">
+    android:background="@android:color/white"
+    android:layout_height="wrap_content">
 <ImageView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -14,6 +15,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="72dp"
-        android:textColor="@android:color/white"
         android:layout_centerVertical="true"/>
 </RelativeLayout>
